[PB-13] - Add debts endpoints, documentation & remove eslint unnecesary rule.
